fetch-price/src/kafka/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: ducchan-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: ducchankawaii/consumer:latest
