fetch-price/src/kafka/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: ducchan-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: ducchankawaii/producer:latest
          ports:
            - containerPort: 3000
